tests/lex-fail/char_eof.fl.0.exp
Error: char_eof.fl(1,1): Unexpected end of input in character literal
'
^ 
